# services/gift-service/internal/infrastructure/events/events.go
@@ -1,12 +1,14 @@
 package events
 
+import "github.com/google/uuid"
+
 // GiftSendSuccessEvent 礼物发送成功事件
 type GiftSendSuccessEvent struct {
-	IdempotencyKey string `json:"idempotency_key"`
-	UserID         string `json:"user_id"`
-	AnchorID       string `json:"anchor_id"`
-	RoomID         string `json:"room_id"`
-	GiftID         string `json:"gift_id"`
-	Amount         int64  `json:"amount"`
-	Timestamp      int64  `json:"timestamp"`
+	IdempotencyKey uuid.UUID `json:"idempotency_key"`
+	UserID         uuid.UUID `json:"user_id"`
+	AnchorID       uuid.UUID `json:"anchor_id"`
+	RoomID         uuid.UUID `json:"room_id"`
+	GiftID         uuid.UUID `json:"gift_id"`
+	Amount         int64     `json:"amount"`
+	Timestamp      int64     `json:"timestamp"`
 }
